syntax = "proto3";

package errors;

option go_package = "github.com/pubgo/funk/proto/errorpb;errorpb";

import "errorpb/status.proto";

message ErrMsg {
  string msg = 1;
  bytes detail = 2;
  map<string, string> tags = 3;
}

message ErrCode {
  status.Code code = 1;
  string status = 2;
  string reason = 3;
}

message ErrTrace {
  string id = 1;
  string operation = 2;
  string service = 3;
  string version = 4;
}

message Error {
  ErrCode code = 1;
  ErrTrace trace = 2;
  ErrMsg msg = 3;
}
